showcase scrollbar and sidebar list ui little fixes

--- a/packages/mercury/showcase/assets/styles/sidebar.css
+++ b/packages/mercury/showcase/assets/styles/sidebar.css
@@ -188,6 +188,7 @@ List
   pointer-events: none;
   color: var(--mer-accent__primary);
   font-weight: 600;
+  padding-block-end: 0; /*it looks better*/
 }
 .sidebar__list li.current-page > a::before {
   background-color: var(--mer-accent__primary);
@@ -209,7 +210,7 @@ List
 }
 .sidebar__list--child::before {
   content: "";
-  height: 94%;
+  height: calc(100% - 15px);
   width: 2px;
   position: absolute;
   left: calc(var(--sc-sidebar-list-child__margin-inline-start) * -1);
